--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,7 +6,7 @@
     {{#refresh}}
         <meta http-equiv="refresh" content="10">
     {{/refresh}}
-    <title>Electronero Blockchain Explorer</title>
+    <title>Litenero Blockchain Explorer</title>
     <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 
